Skip example binaries during install
Signed-off-by: Brian Brooks <brian.brooks@arm.com>
Reviewed-by: Sorin Vultureanu <sorin.vultureanu@enea.com>

--- a/example/classifier/Makefile.am
+++ b/example/classifier/Makefile.am
@@ -1,6 +1,6 @@
 include $(top_srcdir)/example/Makefile.inc
 
-bin_PROGRAMS = classifier 
+noinst_PROGRAMS = classifier 
 classifier_LDFLAGS = $(AM_LDFLAGS) -static
 classifier_CFLAGS = $(AM_CFLAGS)
 
