--- a/example/webserver2/Makefile.am
+++ b/example/webserver2/Makefile.am
@@ -1,6 +1,6 @@
 include $(top_srcdir)/example/Makefile.inc
 
-bin_PROGRAMS = webserver2
+noinst_PROGRAMS = webserver2
 
 AM_CFLAGS +=  -I$(top_srcdir)/include
 AM_CFLAGS +=  -I$(top_srcdir)/include/api
