--- a/example/fpm_burstmode/Makefile.am
+++ b/example/fpm_burstmode/Makefile.am
@@ -1,6 +1,6 @@
 include $(top_srcdir)/example/Makefile.inc
 
-bin_PROGRAMS = fpm_burstmode
+noinst_PROGRAMS = fpm_burstmode
 fpm_burstmode_LDFLAGS = $(AM_LDFLAGS) -static
 fpm_burstmode_CFLAGS = $(AM_CFLAGS)
 
