--- a/example/sysctl/Makefile.am
+++ b/example/sysctl/Makefile.am
@@ -1,6 +1,6 @@
 include $(top_srcdir)/example/Makefile.inc
 
-bin_PROGRAMS = sysctl
+noinst_PROGRAMS = sysctl
 
 AM_CFLAGS +=  -I$(top_srcdir)/include
 AM_CFLAGS +=  -I$(top_srcdir)/include/api
