Add support for thread-local ofp_errno
- Make ofp_errno thread-local.
- Add test to verify that ofp_errno is thread-local.
- Add test for ofp_strerror().
- Add autoconf script to check TLS support in compiler.

Signed-off-by: Brian Brooks <brian.brooks@arm.com>
Reviewed-by: Sorin Vultureanu <sorin.vultureanu@enea.com>

--- a/configure.ac
+++ b/configure.ac
@@ -38,6 +38,8 @@ AC_TYPE_UINT16_T
 
 AC_CHECK_SIZEOF([int *])
 
+AX_TLS
+
 ##########################################################################
 # Check for pthreads availability
 ##########################################################################
