Checksum: 	- expose public API 	- move IPv4 checksum implementation to its own file 	- move IPv4 checksum unitest to its own file
Signed-off-by: Bogdan Pricope <Bogdan.Pricope@enea.com>
Reviewed-by: Brian Brooks <brian.brooks@arm.com>
Reviewed-by: Jose Pekkarinen <jose.pekkarinen@nokia.com>

--- a/test/cunit/Makefile.am
+++ b/test/cunit/Makefile.am
@@ -36,7 +36,8 @@ check_PROGRAMS = \
 	ofp_test_packet_output \
 	ofp_test_port_conf \
 	ofp_test_stat \
-	ofp_test_util
+	ofp_test_util \
+	ofp_test_in_cksum
 
 TESTS = ${check_PROGRAMS}
 
