New source files ofp_igmp.c and ofp_in_mcast.c added.
Signed-off-by: Hannu Jokinen <hannu.jokinen@nokia.com>
Reviewed-by: José Pekkarinen <jose.pekkarinen@nokia.com>
Reviewed-by: Brian Brooks <brian.brooks@arm.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -61,7 +61,9 @@ ofp_util.c \
 ofp_reass.c \
 ofp_sys_socket.c \
 ofp_in.c \
-ofp_sysctl.c
+ofp_sysctl.c \
+ofp_igmp.c \
+ofp_in_mcast.c
 
 if OFP_USE_LIBCK
 AM_CFLAGS +=  -DOFP_USE_LIBCK
