UDP forwarding application for performance measurement using socket callback
Signed-off-by: Bogdan Pricope <Bogdan.Pricope@enea.com>
Signed-off-by: Sorin Vultureanu <sorin.vultureanu@enea.com>

--- a/configure.ac
+++ b/configure.ac
@@ -95,6 +95,7 @@ AC_CONFIG_FILES([
 	example/ioctl_test/Makefile
 	example/sysctl/Makefile
 	example/multicast/Makefile
+	example/udp_fwd_socket/Makefile
 	test/Makefile
 	test/cunit/Makefile
 	])
