ofp_vxlan.c added.
Signed-off-by: Hannu Jokinen <hannu.jokinen@nokia.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -63,7 +63,8 @@ ofp_sys_socket.c \
 ofp_in.c \
 ofp_sysctl.c \
 ofp_igmp.c \
-ofp_in_mcast.c
+ofp_in_mcast.c \
+ofp_vxlan.c
 
 if OFP_USE_LIBCK
 AM_CFLAGS +=  -DOFP_USE_LIBCK
