--- a/example/Makefile.inc
+++ b/example/Makefile.inc
@@ -5,6 +5,7 @@ DEFAULT_INCLUDES=-I.
 
 AM_CFLAGS += \
 	     -I$(srcdir) \
+	     -DODP_VERSION=$(ODP_VERSION) \
 	     -I$(top_srcdir)/include/api
 
 AM_LDFLAGS += -L$(LIB)
