Add changes to compile OFP with older ODP versions
Signed-off-by: Sorin Vultureanu <Sorin.Vultureanu@enea.com>
Reviewed-by: José Pekkarinen<jose.pekkarinen@nokia.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,6 +6,7 @@ VPATH = $(srcdir) $(builddir)
 
 lib_LTLIBRARIES = $(LIB)/libofp.la
 
+AM_CFLAGS += -DODP_VERSION=$(ODP_VERSION)
 AM_CFLAGS +=  -I$(top_srcdir)/include
 AM_CFLAGS +=  -I$(top_srcdir)/include/api
 AM_CFLAGS +=  -DINET
