test: being able to compile the tests without make check
To run a tool like lcov on the tests we need to be able to
compile the tests and not run them.

Signed-off-by: Anders Roxell <anders.roxell@linaro.org>
Tested-by: José Pekkarinen<jose.pekkarinen@nokia.com>
Reviewed-by: José Pekkarinen<jose.pekkarinen@nokia.com>

--- a/test/cunit/Makefile.am
+++ b/test/cunit/Makefile.am
@@ -28,7 +28,7 @@ AM_LDFLAGS += -static -lcunit
 
 LDADD = $(top_builddir)/lib/libofp.la
 
-check_PROGRAMS = \
+bin_PROGRAMS = \
 	ofp_test_arp \
 	ofp_test_debug_pcap \
 	ofp_test_debug_print \
@@ -42,6 +42,6 @@ check_PROGRAMS = \
 	ofp_test_in_cksum \
 	ofp_test_init
 
-TESTS = ${check_PROGRAMS}
+TESTS = ${bin_PROGRAMS}
 
 CLEANFILES = $(wildcard *.xml) packets.txt testbuf.txt test.pcap
