configure: show if cunit is enabled or not
CUnit is a flag that will be enabled/disabled between different builds
and its more convenient to see if it got enabled or disabled at the
bottom of the output from configure than scrolling through all the
output.

Signed-off-by: Anders Roxell <anders.roxell@linaro.org>
Tested-by: José Pekkarinen<jose.pekkarinen@nokia.com>
Reviewed-by: José Pekkarinen<jose.pekkarinen@nokia.com>

--- a/configure.ac
+++ b/configure.ac
@@ -338,4 +338,5 @@ AC_MSG_RESULT([
 	ldflags:		${LDFLAGS}
 	am_ldflags:		${AM_LDFLAGS}
 	odp_version:		${ODP_VERSION}
+	cunit:			${cunit_support}
 ])
