use the .scmversion to set the shared library version
Signed-off-by: Anders Roxell <anders.roxell@linaro.org>

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,9 @@
 *.x86_64
 *.hex
 
+# ignore scmversion file
+.scmversion
+
 # ignore byproducts of autotools (bootstrap,configure)
 *.log
 *.patch
