--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,6 +6,8 @@ VPATH = $(srcdir) $(builddir)
 
 lib_LTLIBRARIES = $(LIB)/libofp.la
 
+AM_LDFLAGS += -version-number '$(LIBOFP_VERSION)'
+
 AM_CFLAGS += -DODP_VERSION=$(ODP_VERSION)
 AM_CFLAGS +=  -I$(top_srcdir)/include
 AM_CFLAGS +=  -I$(top_srcdir)/include/api
