example/*/makefile: addmissing noinst_HEADERS
Needed for make distcheck

Signed-off-by: Anders Roxell <anders.roxell@linaro.org>
Reviewed-by: Sorin Vultureanu <sorin.vultureanu@enea.com>

--- a/example/ioctl_test/Makefile.am
+++ b/example/ioctl_test/Makefile.am
@@ -9,3 +9,5 @@ ioctl_test_LDFLAGS = $(AM_LDFLAGS) -static
 ioctl_test_CFLAGS = $(AM_CFLAGS)
 
 dist_ioctl_test_SOURCES = app_main.c ioctl_test.c
+
+noinst_HEADERS = ${srcdir}/ioctl_test.h
