--- a/example/udp_fwd_socket/Makefile.am
+++ b/example/udp_fwd_socket/Makefile.am
@@ -9,3 +9,5 @@ udp_fwd_socket_LDFLAGS = $(AM_LDFLAGS) -static
 udp_fwd_socket_CFLAGS = $(AM_CFLAGS)
 
 dist_udp_fwd_socket_SOURCES = app_main.c udp_fwd_socket.c
+
+noinst_HEADERS = ${srcdir}/udp_fwd_socket.h
