Update packet burst send mechanism
Signed-off-by: Bogdan Pricope <Bogdan.Pricope@enea.com>
Reviewed-by: José Pekkarinen <jose.pekkarinen@nokia.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -13,6 +13,7 @@ AM_CFLAGS +=  -DINET
 
 __LIB__libofp_la_SOURCES = \
 ofp_pkt_processing.c \
+ofp_pkt_send_burst.c \
 ofp_avl.c \
 ofp_log.c \
 ofp_debug.c \
