--- a/test/cunit/Makefile.am
+++ b/test/cunit/Makefile.am
@@ -41,7 +41,8 @@ bin_PROGRAMS = \
 	ofp_test_util \
 	ofp_test_in_cksum \
 	ofp_test_init \
-	ofp_test_in_var
+	ofp_test_in_var \
+	ofp_test_tcp_seq
 
 TESTS = ${bin_PROGRAMS}
 
