Update fpm example application
Signed-off-by: Bogdan Pricope <Bogdan.Pricope@enea.com>
Reviewed-by: José Pekkarinen <jose.pekkarinen@nokia.com>

--- a/example/Makefile.inc
+++ b/example/Makefile.inc
@@ -6,6 +6,7 @@ DEFAULT_INCLUDES=-I.
 AM_CFLAGS += \
 	     -I$(srcdir) \
 	     -DODP_VERSION=$(ODP_VERSION) \
-	     -I$(top_srcdir)/include/api
+	     -I$(top_srcdir)/include/api \
+	     -I$(top_srcdir)/example/common
 
 AM_LDFLAGS += -L$(LIB)
