--- a/example/fpm/Makefile.am
+++ b/example/fpm/Makefile.am
@@ -4,4 +4,5 @@ noinst_PROGRAMS = fpm
 fpm_LDFLAGS = $(AM_LDFLAGS) -static
 fpm_CFLAGS = $(AM_CFLAGS)
 
-dist_fpm_SOURCES = app_main.c
+dist_fpm_SOURCES = app_main.c \
+	 ../common/linux_sigaction.c
