Add missing noinst_HEADERS
Add missing headers discovered with 'make distcheck' command.

Signed-off-by: Antero Nousiainen <antero.nousiainen@nokia.com>
Reviewed-by: Sorin Vultureanu <sorin.vultureanu@enea.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -107,5 +107,6 @@ noinst_HEADERS = \
 		  $(top_srcdir)/include/ofpi_udp6_var.h \
 		  $(top_srcdir)/include/ofpi_vxlan.h \
 		  $(top_srcdir)/include/ofpi_hook.h \
-		  $(top_srcdir)/include/ofpi_util.h
+		  $(top_srcdir)/include/ofpi_util.h \
+		  $(top_srcdir)/include/ofpi_tcp_shm.h
 
