--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -74,7 +74,8 @@ ofp_in.c \
 ofp_sysctl.c \
 ofp_igmp.c \
 ofp_in_mcast.c \
-ofp_vxlan.c
+ofp_vxlan.c \
+ofp_libnetworkinterpose.c
 
 if OFP_USE_LIBCK
 AM_CFLAGS +=  -DOFP_USE_LIBCK
