Add unit tests for 'ofpi_rt_lookup.h'
Add unit tests to cover functionality in 'ofpi_rt_lookup.h'. Valgrind
was used during test creation to verify no leaks are possible.

Inline functions in 'ofpi_rt_lookup.h' have duplicate code but fixing
these would expose the internals and overload the header.

Rtl search function is missing null pointer checks for incoming
parameters and has a fixed sized match table that could overflow with
enough matching data. The function will, in any case, still only return
the last matching data.

Signed-off-by: Antero Nousiainen <antero.nousiainen@nokia.com>
Reviewed-by: Sorin Vultureanu <sorin.vultureanu@enea.com>

--- a/test/cunit/Makefile.am
+++ b/test/cunit/Makefile.am
@@ -42,7 +42,8 @@ bin_PROGRAMS = \
 	ofp_test_in_cksum \
 	ofp_test_init \
 	ofp_test_in_var \
-	ofp_test_tcp_seq
+	ofp_test_tcp_seq \
+	ofp_test_rt_lookup
 
 TESTS = ${bin_PROGRAMS}
 
