configure: disconnect release version with SO version
OFP releases shouldn't force application to rebuild packages if the ABI
hasn't changed. That shouldn't be needed if we use the SO-version as it
is intended to be used.

Signed-off-by: Anders Roxell <anders.roxell@linaro.org>
Reviewed-by: Sorin Vultureanu <sorin.vultureanu@enea.com>

--- a/configure.ac
+++ b/configure.ac
@@ -43,8 +43,7 @@ AX_TLS
 ##########################################################################
 # Set correct platform library version
 ##########################################################################
-AGE=0
-LIBOFP_VERSION=$(echo $(sed -n 's|.git.*$||p' .scmversion).$AGE|awk -F . '{printf("%d:%d:%d\n", $1,$2,$3)}')
+LIBOFP_VERSION=0:0:0
 AC_SUBST(LIBOFP_VERSION)
 
 ##########################################################################
