pkgconfig: use main OFP version
pkgconfig version string to follow the main OFP version, instead of git
snapshot string since pkg-config/lib consumers are concerned with the
real upstream version.

Signed-off-by: Anders Roxell <anders.roxell@linaro.org>

--- a/configure.ac
+++ b/configure.ac
@@ -47,6 +47,12 @@ LIBOFP_VERSION=0:0:0
 AC_SUBST(LIBOFP_VERSION)
 
 ##########################################################################
+# Set correct pkgconfig version
+##########################################################################
+PKGCONFIG_VERSION=$(echo $VERSION | awk -F '.git' '{print $1}')
+AC_SUBST(PKGCONFIG_VERSION)
+
+##########################################################################
 # Check for pthreads availability
 ##########################################################################
 
