Makefile.am: add bootstrap to EXTRA_DIST
Signed-off-by: Anders Roxell <anders.roxell@linaro.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -108,4 +108,4 @@ noinst_HEADERS = \
 		  $(top_srcdir)/include/ofpi_util.h \
 		  $(top_srcdir)/include/ofpi_tcp_shm.h
 
-EXTRA_DIST = .scmversion
+EXTRA_DIST = bootstrap .scmversion
