scripts: add Makefile.am to include files into dist
Add a Makefile.am in scripts to point out what scripts should be added
to the dist.

Signed-off-by: Anders Roxell <anders.roxell@linaro.org>
Reviewed-by: Sorin Vultureanu <sorin.vultureanu@enea.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 ACLOCAL_AMFLAGS=-I m4
 AUTOMAKE_OPTIONS = foreign
-SUBDIRS = src example test
+SUBDIRS = scripts src example test
 
 include_HEADERS = \
 		$(top_srcdir)/include/api/ofp.h \
