--- a/test/cunit/Makefile.am
+++ b/test/cunit/Makefile.am
@@ -43,7 +43,8 @@ bin_PROGRAMS = \
 	ofp_test_init \
 	ofp_test_in_var \
 	ofp_test_tcp_seq \
-	ofp_test_rt_lookup
+	ofp_test_rt_lookup \
+	ofp_test_rt_mtrie_lookup
 
 TESTS = ${bin_PROGRAMS}
 
