--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -75,7 +75,8 @@ ofp_sysctl.c \
 ofp_igmp.c \
 ofp_in_mcast.c \
 ofp_vxlan.c \
-ofp_shared_mem.c
+ofp_shared_mem.c \
+ofp_uma.c
 
 if OFP_USE_LIBCK
 AM_CFLAGS +=  -DOFP_USE_LIBCK
